updated for image and threed gen from replicate
